feat: add extraction settings

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -1,6 +1,7 @@
 {
   "about": "Über uns",
   "about-description": "Erfahre mehr über die Extension",
+  "academic-institutional": "Akademisch & Institutionell",
   "advanced-fields": "Erweiterte Felder",
   "advanced-fields-description": "Diese Felder sind optional und können zusätzliche Matching-Präzision für spezialisierte Inhaltstypen bieten. Aktivieren Sie nur die für Ihren Anwendungsfall relevanten Felder.",
   "advisor": "Betreuer",
@@ -60,8 +61,10 @@
   "copy-identifier-tooltip": "Die primäre Kennung (DOI, PMCID, etc.) in die Zwischenablage kopieren",
   "copy-reference": "Referenz kopieren",
   "core-fields": "Kernfelder",
+  "core-metadata": "Kern-Metadaten",
   "create-one-here": "hier erstellen",
   "dark": "Dunkel",
+  "date-information": "Datums-Informationen",
   "date-range": "Datumsbereich",
   "day": "Tag",
   "degree": "Abschluss",
@@ -69,6 +72,7 @@
   "department": "Abteilung",
   "description": "Beschreibung",
   "description-match": "Beschreibung-Übereinstimmung",
+  "deselect-all": "Alle abwählen",
   "details": "Details",
   "display": "Darstellung",
   "display-mode": "Anzeigemodus",
@@ -97,7 +101,32 @@
   "extracting-dois-description": "Extrahiere DOIs aus dem Text. Bitte warten...",
   "extracting-references": "Extrahiere Referenzen...",
   "extracting-references-description": "Extrahiere Referenzen aus dem Text...",
+  "extraction-academic-information": "Akademische Informationen",
+  "extraction-core-metadata": "Kern-Metadaten",
+  "extraction-date-information": "Datums-Informationen",
+  "extraction-deselect-all": "Alle abwählen",
+  "extraction-identifiers": "Identifikatoren",
+  "extraction-publication-details": "Publikations-Details",
+  "extraction-select-all": "Alle auswählen",
+  "extraction-settings": "Extraktions-Einstellungen",
+  "extraction-settings-description": "Konfiguriere, welche Metadatenfelder bei der Dokumentenverarbeitung extrahiert werden sollen",
+  "extraction-technical-details": "Technische Details",
   "field": "Feld",
+  "field-abstract": "Abstract",
+  "field-accepted": "Annahmedatum",
+  "field-advisor": "Betreuer",
+  "field-approximateDate": "Ungefähres Datum",
+  "field-articleNumber": "Artikelnummer",
+  "field-arxivId": "arXiv ID",
+  "field-authors": "Autoren",
+  "field-chapterTitle": "Kapiteltitel",
+  "field-citationCount": "Anzahl Zitierungen",
+  "field-conference": "Konferenz",
+  "field-containerTitle": "Zeitschrift/Container-Titel",
+  "field-dateRange": "Datumsbereich",
+  "field-day": "Tag",
+  "field-degree": "Abschluss",
+  "field-department": "Fachbereich",
   "field-description-articleNumber": "Gewichtung für Artikelnummer-Übereinstimmung (elektronische Zeitschriften)",
   "field-description-arxivId": "Gewichtung für arXiv ID-Übereinstimmungen (wichtig für Preprints)",
   "field-description-authors": "Wie wichtig ist die Autoren-Übereinstimmung für die Referenz-Verifizierung",
@@ -119,9 +148,58 @@
   "field-description-url": "Gewichtung für URL-Übereinstimmung",
   "field-description-volume": "Gewichtung für Band-Nummer-Übereinstimmungen",
   "field-description-year": "Wie wichtig ist die Übereinstimmung des Veröffentlichungsjahrs für die Referenz-Verifizierung",
+  "field-doi": "DOI",
+  "field-edition": "Auflage",
+  "field-format": "Format",
+  "field-inPress": "Im Druck",
+  "field-institution": "Institution",
+  "field-isbn": "ISBN",
+  "field-issn": "ISSN",
+  "field-issue": "Ausgabe",
+  "field-issued": "Publikationsdatum",
+  "field-issuePrefix": "Ausgabe-Präfix",
+  "field-keywords": "Schlüsselwörter",
+  "field-language": "Sprache",
+  "field-license": "Lizenz",
+  "field-location": "Ort",
+  "field-medium": "Medium",
+  "field-month": "Monat",
+  "field-noDate": "Kein Datum",
+  "field-openAccess": "Open Access",
+  "field-originalLanguage": "Originalsprache",
+  "field-originalTitle": "Originaltitel",
+  "field-pages": "Seiten",
+  "field-pageType": "Seitentyp",
+  "field-paragraphNumber": "Absatznummer",
+  "field-peerReviewed": "Peer-Review",
+  "field-pmcid": "PMC ID",
+  "field-pmid": "PubMed ID",
+  "field-publicationPlace": "Publikationsort",
+  "field-publishedOnline": "Online-Publikationsdatum",
+  "field-publisher": "Verlag",
+  "field-publisherPlace": "Verlagsort",
+  "field-references": "Referenzen",
+  "field-retracted": "Zurückgezogen",
+  "field-retrievalDate": "Abrufdatum",
+  "field-season": "Jahreszeit",
+  "field-series": "Serie",
+  "field-seriesNumber": "Seriennummer",
+  "field-sourceType": "Quellentyp",
+  "field-subjects": "Fachbereiche",
+  "field-submitted": "Einreichungsdatum",
+  "field-subtitle": "Untertitel",
+  "field-supplementInfo": "Ergänzungsinfo",
+  "field-title": "Titel",
+  "field-url": "URL",
+  "field-venue": "Veranstaltungsort",
+  "field-volume": "Band",
+  "field-volumePrefix": "Band-Präfix",
+  "field-websiteUrl": "Website-URL",
   "field-weights": "Feldgewichtungen",
   "field-weights-description": "Passen Sie an, wie wichtig jedes Feld bei der Verifizierung von Referenzen ist. Alle Gewichtungen müssen zusammen 100% ergeben.",
   "field-weights-explanation": "Feldgewichtungen bestimmen, wie wichtig jedes Metadatenfeld beim Vergleich von Referenzen ist. Höhere Gewichtungen bedeuten, dass das Feld mehr Einfluss auf die Gesamtbewertung hat. Die Summe muss 100% ergeben.",
+  "field-year": "Jahr",
+  "field-yearSuffix": "Jahr-Suffix",
   "flag-problematic": "Als problematisch markieren",
   "flag-problematic-tooltip": "Diese Referenz als möglicherweise problematisch kennzeichnen",
   "found": "Gefunden",
@@ -138,6 +216,7 @@
   "how-field-weights-work": "Wie Feldgewichtungen funktionieren",
   "hr": "h",
   "identifier-fields": "Identifikationsfelder",
+  "identifiers": "Identifikatoren",
   "idle-state-text": "Sie haben noch keine Eingabe gemacht oder die Überprüfung noch nicht gestartet. Bitte geben Sie einen Text ein oder laden Sie eine PDF-Datei hoch und klicken Sie auf 'Überprüfen'",
   "idle-state-title": "Eingabe oder Überprüfung ausstehend",
   "impact": "Auswirkung",
@@ -220,6 +299,7 @@
   "popup": "Popup",
   "practical-example": "Praktisches Beispiel",
   "publication-date": "Publikationsdatum",
+  "publication-details": "Publikations-Details",
   "publication-place": "Publikationsort",
   "publication-year": "Publikationsjahr",
   "published-date": "Veröffentlichungsdatum",
@@ -254,6 +334,8 @@
   "search-references": "Referenzen suchen",
   "season": "Jahreszeit",
   "sec": "s",
+  "select-all": "Alle auswählen",
+  "select-essentials": "Wichtige auswählen",
   "series": "Serie",
   "series-number": "Seriennummer",
   "show-additional-fields": "Zusätzliche Felder anzeigen",
@@ -272,6 +354,7 @@
   "subtitle": "Untertitel",
   "supplement-info": "Beilageninformation",
   "system": "System",
+  "technical-details": "Technische Details",
   "test-api-key": "API-Schlüssel testen",
   "theme": "Design",
   "theme-option-description": "Wählen Sie das Design der Erweiterung",
@@ -279,6 +362,81 @@
   "title-match": "Titel-Übereinstimmung",
   "tokens-per-minute": "Token pro Minute",
   "tokens-per-minute-description": "Dies ist das Limit der KI-Token pro Minute",
+  "tooltip-abstract": "Kurze Zusammenfassung des Inhalts der Publikation (z.B. 'This study examines...')",
+  "tooltip-accepted": "Datum, an dem das Manuskript zur Veröffentlichung angenommen wurde (z.B. '2024-03-15')",
+  "tooltip-advisor": "Akademischer Betreuer oder Supervisor (z.B. 'Prof. Dr. Schmidt')",
+  "tooltip-approximateDate": "Ungefähres Publikationsdatum (z.B. 'ca. 2023')",
+  "tooltip-articleNumber": "Eindeutige Artikelnummer (z.B. 'e2024001' bei elektronischen Zeitschriften)",
+  "tooltip-arxiv-id": "arXiv-Identifikator für Preprints und wissenschaftliche Arbeiten (z.B. '2024.01234')",
+  "tooltip-arxivId": "arXiv-Identifikator für Preprints und wissenschaftliche Arbeiten (z.B. '2024.01234')",
+  "tooltip-authors": "Liste der Autoren, die zu dem Werk beigetragen haben (z.B. 'Smith, J. & Doe, A.')",
+  "tooltip-chapterTitle": "Titel eines bestimmten Kapitels in einem Buch (z.B. 'Introduction to Machine Learning')",
+  "tooltip-citationCount": "Anzahl der Zitierungen dieses Werks (z.B. '145')",
+  "tooltip-conference": "Name der Konferenz, auf der präsentiert wurde (z.B. 'ICML 2024')",
+  "tooltip-containerTitle": "Name der Zeitschrift, des Buchs oder der Konferenzberichte (z.B. 'Nature', 'Proceedings of ACL')",
+  "tooltip-dateRange": "Datumsbereich für die Publikation (z.B. '2024-01-15/2024-01-18')",
+  "tooltip-day": "Tag der Veröffentlichung (z.B. '15')",
+  "tooltip-degree": "Akademischer Grad, für den das Werk eingereicht wurde (z.B. 'PhD', 'Master')",
+  "tooltip-department": "Akademischer Fachbereich, der mit dem Werk verbunden ist (z.B. 'Computer Science', 'Psychology')",
+  "tooltip-doi": "Digital Object Identifier - eindeutiger persistenter Identifikator (z.B. '10.1038/nature12373')",
+  "tooltip-edition": "Auflagennummer der Publikation (z.B. '3rd edition', '2. Auflage')",
+  "tooltip-format": "Dateiformat oder Medientyp der Publikation (z.B. 'PDF', 'HTML', 'print')",
+  "tooltip-inPress": "Publikation ist angenommen, aber noch nicht veröffentlicht (z.B. 'true')",
+  "tooltip-institution": "Akademische Institution, die mit dem Werk verbunden ist (z.B. 'Harvard University', 'Max Planck Institute')",
+  "tooltip-isbn": "Internationale Standardbuchnummer für Bücher (z.B. '978-3-16-148410-0')",
+  "tooltip-issn": "Internationale Standardnummer für Periodika (z.B. '1234-5678')",
+  "tooltip-issue": "Ausgabennummer innerhalb eines Bands (z.B. '3', 'Special Issue')",
+  "tooltip-issue-prefix": "Präfix für die Ausgabennummerierung (z.B. 'No.')",
+  "tooltip-issued": "Datum, an dem die Publikation offiziell veröffentlicht wurde (z.B. '2024-05-15')",
+  "tooltip-keywords": "Schlüsselwörter oder Tags, die mit der Publikation verbunden sind (z.B. 'machine learning, AI, neural networks')",
+  "tooltip-language": "Sprache, in der die Publikation verfasst ist (z.B. 'en', 'de', 'fr')",
+  "tooltip-license": "Lizenz, unter der das Werk veröffentlicht ist (z.B. 'CC BY 4.0', 'MIT')",
+  "tooltip-location": "Geografischer Ort bezogen auf die Publikation (z.B. 'Berlin', 'New York')",
+  "tooltip-medium": "Physisches oder digitales Medium der Publikation (z.B. 'print', 'online', 'CD-ROM')",
+  "tooltip-month": "Monat der Veröffentlichung (z.B. '05', 'May')",
+  "tooltip-noDate": "Zeigt an, dass kein spezifisches Publikationsdatum vorhanden ist (z.B. 'n.d.', 'o.J.')",
+  "tooltip-openAccess": "Ob die Publikation frei zugänglich ist (z.B. 'true', 'false')",
+  "tooltip-original-language": "Originalsprache der Publikation (z.B. 'German', 'French')",
+  "tooltip-original-title": "Originaltitel in der Ausgangssprache (z.B. 'Le Petit Prince' für 'Der kleine Prinz')",
+  "tooltip-page-type": "Art der Seitennummerierung (z.B. 'arabic', 'roman', 'letter')",
+  "tooltip-pages": "Seitenzahlen, auf denen der Artikel erscheint (z.B. '123-145', 'pp. 67-89')",
+  "tooltip-paragraph-number": "Spezifische Absatznummer-Referenz (z.B. '¶ 15', 'para. 3')",
+  "tooltip-peerReviewed": "Ob das Werk ein Peer-Review durchlaufen hat (z.B. 'true', 'false')",
+  "tooltip-pmcid": "PubMed Central-Identifikator für Open-Access-Artikel (z.B. 'PMC1234567')",
+  "tooltip-pmid": "PubMed-Identifikator für medizinische Literatur (z.B. '12345678')",
+  "tooltip-publication-place": "Ort, an dem das Werk veröffentlicht wurde (z.B. 'Cambridge, MA')",
+  "tooltip-publishedOnline": "Datum, an dem die Publikation online verfügbar wurde (z.B. '2024-03-10')",
+  "tooltip-publisher": "Organisation oder Unternehmen, das das Werk veröffentlicht hat (z.B. 'Springer', 'MIT Press')",
+  "tooltip-publisherPlace": "Ort, an dem der Verlag ansässig ist (z.B. 'Berlin', 'Oxford')",
+  "tooltip-references": "Liste der in der Publikation zitierten Quellen (z.B. 'Smith (2020), Doe et al. (2019)')",
+  "tooltip-retracted": "Ob die Publikation zurückgezogen wurde (z.B. 'true', 'false')",
+  "tooltip-retrieval-date": "Datum, an dem die Quelle aufgerufen wurde (z.B. '2024-07-12')",
+  "tooltip-season": "Jahreszeit der Publikation (z.B. 'Spring', 'Winter 2024')",
+  "tooltip-series": "Name der Publikationsreihe (z.B. 'Lecture Notes in Computer Science', 'Studies in Linguistics')",
+  "tooltip-series-number": "Nummer innerhalb einer Publikationsreihe (z.B. '1234', 'Vol. 15')",
+  "tooltip-sourceType": "Art der Quelle (z.B. 'journal-article', 'book', 'thesis', 'conference-paper')",
+  "tooltip-subjects": "Akademische Fachbereiche oder Disziplinen (z.B. 'Computer Science', 'Medicine')",
+  "tooltip-submitted": "Datum, an dem das Manuskript eingereicht wurde (z.B. '2024-01-15')",
+  "tooltip-subtitle": "Sekundärer Titel, der zusätzlichen Kontext bietet (z.B. 'A Comprehensive Guide', 'Theory and Practice')",
+  "tooltip-supplement-info": "Ergänzende Informationen über die Publikation (z.B. 'Supplementary Material', 'Appendix A')",
+  "tooltip-title": "Der Haupttitel der Publikation (z.B. 'Machine Learning in Healthcare')",
+  "tooltip-url": "Webadresse, unter der die Publikation zugänglich ist (z.B. 'https://example.com/article')",
+  "tooltip-venue": "Konferenz oder Veranstaltung, auf der das Werk präsentiert wurde (z.B. 'NeurIPS 2024', 'ICML')",
+  "tooltip-volume": "Bandnummer in einer Publikationsreihe (z.B. '15', 'XXIII')",
+  "tooltip-volume-prefix": "Präfix für die Bandnummerierung (z.B. 'Vol.')",
+  "tooltip-websiteUrl": "Offizielle Website-URL der Publikation (z.B. 'https://journal.example.com')",
+  "tooltip-year": "Jahr der Veröffentlichung (z.B. '2024', '2023')",
+  "tooltip-yearSuffix": "Zusätzliches Suffix für das Publikationsjahr (z.B. 'a', 'b' bei mehreren Publikationen im Jahr)",
+  "tooltip-publicationPlace": "Publikationsort (wichtig für deutsche Zitationsstile)",
+  "tooltip-retrievalDate": "Wann die Quelle abgerufen wurde (für Online-Quellen)",
+  "tooltip-originalTitle": "Originaltitel (für übersetzte Werke) - wichtig für deutsche Zitationsstile",
+  "tooltip-originalLanguage": "Originalsprache des Werks (für Übersetzungen)",
+  "tooltip-seriesNumber": "Seriennummer innerhalb einer Serie",
+  "tooltip-pageType": "Art der Seitenverweis (z.B. 'pp.' oder 'p.')",
+  "tooltip-paragraphNumber": "Absatznummer für Quellen ohne Seitenzahlen",
+  "tooltip-volumePrefix": "Präfix für Band (z.B. 'Vol.', 'Vols.')",
+  "tooltip-issuePrefix": "Präfix für Ausgabe (z.B. 'No.')",
+  "tooltip-supplementInfo": "Supplement-Informationen (z.B. 'Suppl. 2')",
   "total-weight": "Gesamtgewichtung",
   "unregistered": "Nicht registriert",
   "unverified": "Nicht verifiziert",
