--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -1,6 +1,7 @@
 {
   "about": "About",
   "about-description": "Learn more about the extension",
+  "academic-institutional": "Academic & Institutional",
   "advanced-fields": "Advanced Fields",
   "advanced-fields-description": "These fields are optional and can provide additional matching precision for specialized content types. Enable only the fields relevant to your use case.",
   "advisor": "Advisor",
@@ -60,14 +61,17 @@
   "copy-identifier-tooltip": "Copy the primary identifier (DOI, PMCID, etc.) to clipboard",
   "copy-reference": "Copy reference",
   "core-fields": "Core Fields",
+  "core-metadata": "Core Metadata",
   "create-one-here": "create one here",
   "dark": "Dark",
+  "date-information": "Date Information",
   "date-range": "Date Range",
   "day": "Day",
   "degree": "Degree",
   "department": "Department",
   "description": "Description",
   "description-match": "Description Match",
+  "deselect-all": "Deselect All",
   "details": "",
   "display": "Display",
   "display-mode": "Display Mode",
@@ -96,7 +100,32 @@
   "extracting-dois-description": "Extracting DOIs from the Text. Please wait...",
   "extracting-references": "Extracting References...",
   "extracting-references-description": "Extracting References from the Text...",
+  "extraction-academic-information": "Academic Information",
+  "extraction-core-metadata": "Core Metadata",
+  "extraction-date-information": "Date Information",
+  "extraction-deselect-all": "Deselect All",
+  "extraction-identifiers": "Identifiers",
+  "extraction-publication-details": "Publication Details",
+  "extraction-select-all": "Select All",
+  "extraction-settings": "Extraction Settings",
+  "extraction-settings-description": "Configure which metadata fields should be extracted during document processing",
+  "extraction-technical-details": "Technical Details",
   "field": "Field",
+  "field-abstract": "Abstract",
+  "field-accepted": "Acceptance Date",
+  "field-advisor": "Advisor",
+  "field-approximateDate": "Approximate Date",
+  "field-articleNumber": "Article Number",
+  "field-arxivId": "arXiv ID",
+  "field-authors": "Authors",
+  "field-chapterTitle": "Chapter Title",
+  "field-citationCount": "Citation Count",
+  "field-conference": "Conference",
+  "field-containerTitle": "Journal/Container Title",
+  "field-dateRange": "Date Range",
+  "field-day": "Day",
+  "field-degree": "Degree",
+  "field-department": "Department",
   "field-description-articleNumber": "Weight for article number matching (electronic journals)",
   "field-description-arxivId": "Weight for arXiv ID matches (important for preprints)",
   "field-description-authors": "How important is author matching for reference verification",
@@ -118,9 +147,58 @@
   "field-description-url": "Weight for URL matching",
   "field-description-volume": "Weight for volume number matching",
   "field-description-year": "How important is publication year matching for reference verification",
+  "field-doi": "DOI",
+  "field-edition": "Edition",
+  "field-format": "Format",
+  "field-inPress": "In Press",
+  "field-institution": "Institution",
+  "field-isbn": "ISBN",
+  "field-issn": "ISSN",
+  "field-issue": "Issue",
+  "field-issued": "Publication Date",
+  "field-issuePrefix": "Issue Prefix",
+  "field-keywords": "Keywords",
+  "field-language": "Language",
+  "field-license": "License",
+  "field-location": "Location",
+  "field-medium": "Medium",
+  "field-month": "Month",
+  "field-noDate": "No Date",
+  "field-openAccess": "Open Access",
+  "field-originalLanguage": "Original Language",
+  "field-originalTitle": "Original Title",
+  "field-pages": "Pages",
+  "field-pageType": "Page Type",
+  "field-paragraphNumber": "Paragraph Number",
+  "field-peerReviewed": "Peer Reviewed",
+  "field-pmcid": "PMC ID",
+  "field-pmid": "PubMed ID",
+  "field-publicationPlace": "Publication Place",
+  "field-publishedOnline": "Online Publication Date",
+  "field-publisher": "Publisher",
+  "field-publisherPlace": "Publisher Place",
+  "field-references": "References",
+  "field-retracted": "Retracted",
+  "field-retrievalDate": "Retrieval Date",
+  "field-season": "Season",
+  "field-series": "Series",
+  "field-seriesNumber": "Series Number",
+  "field-sourceType": "Source Type",
+  "field-subjects": "Subjects",
+  "field-submitted": "Submission Date",
+  "field-subtitle": "Subtitle",
+  "field-supplementInfo": "Supplement Info",
+  "field-title": "Title",
+  "field-url": "URL",
+  "field-venue": "Venue",
+  "field-volume": "Volume",
+  "field-volumePrefix": "Volume Prefix",
+  "field-websiteUrl": "Website URL",
   "field-weights": "Field Weights",
   "field-weights-description": "Adjust how much importance each field has when verifying references. All weights must sum to 100%.",
   "field-weights-explanation": "Field weights determine how important each metadata field is when comparing references. Higher weights mean that field has more influence on the overall match score. The total must equal 100%.",
+  "field-year": "Year",
+  "field-yearSuffix": "Year Suffix",
   "flag-problematic": "Flag as problematic",
   "flag-problematic-tooltip": "Mark this reference as potentially problematic",
   "found": "Found",
@@ -137,6 +215,7 @@
   "how-field-weights-work": "How Field Weights Work",
   "hr": "hr",
   "identifier-fields": "Identifier Fields",
+  "identifiers": "Identifiers",
   "idle-state-text": "You have not entered any input yet or have not started the verification. Please enter text or upload a PDF file and click on 'Verify'",
   "idle-state-title": "Input or verification pending",
   "impact": "Impact",
@@ -219,6 +298,7 @@
   "popup": "Popup",
   "practical-example": "Practical Example",
   "publication-date": "Publication Date",
+  "publication-details": "Publication Details",
   "publication-place": "Publication Place",
   "publication-year": "Publication Year",
   "published-date": "Published Date",
@@ -253,6 +333,8 @@
   "search-references": "Search references",
   "season": "Season",
   "sec": "sec",
+  "select-all": "Select All",
+  "select-essentials": "Select Essentials",
   "series": "Series",
   "series-number": "Series Number",
   "show-additional-fields": "Show additional fields",
@@ -271,6 +353,7 @@
   "subtitle": "Subtitle",
   "supplement-info": "Supplement Info",
   "system": "System",
+  "technical-details": "Technical Details",
   "test-api-key": "Test API Key",
   "theme": "Theme",
   "theme-option-description": "Select the theme of the extension",
@@ -278,6 +361,81 @@
   "title-match": "Title Match",
   "tokens-per-minute": "Tokens per minute",
   "tokens-per-minute-description": "This is the limit of AI tokens per minute",
+  "tooltip-abstract": "Brief summary of the publication's content (e.g. 'This study examines...')",
+  "tooltip-accepted": "Date when the manuscript was accepted for publication (e.g. '2024-03-15')",
+  "tooltip-advisor": "Academic advisor or supervisor (e.g. 'Prof. Dr. Schmidt')",
+  "tooltip-approximateDate": "Approximate publication date (e.g. 'ca. 2023')",
+  "tooltip-articleNumber": "Unique article number (e.g. 'e2024001' in electronic journals)",
+  "tooltip-arxiv-id": "arXiv identifier for preprints and scientific papers (e.g. '2024.01234')",
+  "tooltip-arxivId": "arXiv identifier for preprints and scientific papers (e.g. '2024.01234')",
+  "tooltip-authors": "List of authors who contributed to the work (e.g. 'Smith, J. & Doe, A.')",
+  "tooltip-chapterTitle": "Title of a specific chapter in a book (e.g. 'Introduction to Machine Learning')",
+  "tooltip-citationCount": "Number of times this work has been cited (e.g. '145')",
+  "tooltip-conference": "Name of the conference where presented (e.g. 'ICML 2024')",
+  "tooltip-containerTitle": "Name of the journal, book, or conference proceedings (e.g. 'Nature', 'Proceedings of ACL')",
+  "tooltip-dateRange": "Date range for the publication (e.g. '2024-01-15/2024-01-18')",
+  "tooltip-day": "Day of publication (e.g. '15')",
+  "tooltip-degree": "Academic degree for which the work was submitted (e.g. 'PhD', 'Master')",
+  "tooltip-department": "Academic department associated with the work (e.g. 'Computer Science', 'Psychology')",
+  "tooltip-doi": "Digital Object Identifier - unique persistent identifier (e.g. '10.1038/nature12373')",
+  "tooltip-edition": "Edition number of the publication (e.g. '3rd edition', '2nd ed.')",
+  "tooltip-format": "File format or media type of the publication (e.g. 'PDF', 'HTML', 'print')",
+  "tooltip-inPress": "Publication is accepted but not yet published (e.g. 'true')",
+  "tooltip-institution": "Academic institution associated with the work (e.g. 'Harvard University', 'Max Planck Institute')",
+  "tooltip-isbn": "International Standard Book Number for books (e.g. '978-3-16-148410-0')",
+  "tooltip-issn": "International Standard Serial Number for periodicals (e.g. '1234-5678')",
+  "tooltip-issue": "Issue number within a volume (e.g. '3', 'Special Issue')",
+  "tooltip-issue-prefix": "Prefix for issue numbering (e.g. 'No.')",
+  "tooltip-issued": "Date when the publication was officially released (e.g. '2024-05-15')",
+  "tooltip-keywords": "Keywords or tags associated with the publication (e.g. 'machine learning, AI, neural networks')",
+  "tooltip-language": "Language in which the publication is written (e.g. 'en', 'de', 'fr')",
+  "tooltip-license": "License under which the work is published (e.g. 'CC BY 4.0', 'MIT')",
+  "tooltip-location": "Geographic location related to the publication (e.g. 'Berlin', 'New York')",
+  "tooltip-medium": "Physical or digital medium of the publication (e.g. 'print', 'online', 'CD-ROM')",
+  "tooltip-month": "Month of publication (e.g. '05', 'May')",
+  "tooltip-noDate": "Indicates no specific publication date (e.g. 'n.d.', 'o.J.')",
+  "tooltip-openAccess": "Whether the publication is freely accessible (e.g. 'true', 'false')",
+  "tooltip-original-language": "Original language of the publication (e.g. 'German', 'French')",
+  "tooltip-original-title": "Original title in the source language (e.g. 'Le Petit Prince' for 'The Little Prince')",
+  "tooltip-page-type": "Type of page numbering (e.g. 'arabic', 'roman', 'letter')",
+  "tooltip-pages": "Page numbers where the article appears (e.g. '123-145', 'pp. 67-89')",
+  "tooltip-paragraph-number": "Specific paragraph number reference (e.g. '¶ 15', 'para. 3')",
+  "tooltip-peerReviewed": "Whether the work underwent peer review (e.g. 'true', 'false')",
+  "tooltip-pmcid": "PubMed Central identifier for open access articles (e.g. 'PMC1234567')",
+  "tooltip-pmid": "PubMed unique identifier for medical literature (e.g. '12345678')",
+  "tooltip-publication-place": "Location where the work was published (e.g. 'Cambridge, MA')",
+  "tooltip-publishedOnline": "Date when the publication became available online (e.g. '2024-03-10')",
+  "tooltip-publisher": "Organization or company that published the work (e.g. 'Springer', 'MIT Press')",
+  "tooltip-publisherPlace": "Location where the publisher is based (e.g. 'Berlin', 'Oxford')",
+  "tooltip-references": "List of sources cited in the publication (e.g. 'Smith (2020), Doe et al. (2019)')",
+  "tooltip-retracted": "Whether the publication has been retracted (e.g. 'true', 'false')",
+  "tooltip-retrieval-date": "Date when the source was accessed (e.g. '2024-07-12')",
+  "tooltip-season": "Season of publication (e.g. 'Spring', 'Winter 2024')",
+  "tooltip-series": "Publication series name (e.g. 'Lecture Notes in Computer Science', 'Studies in Linguistics')",
+  "tooltip-series-number": "Number within a publication series (e.g. '1234', 'Vol. 15')",
+  "tooltip-sourceType": "Type of source (e.g. 'journal-article', 'book', 'thesis', 'conference-paper')",
+  "tooltip-subjects": "Academic subjects or disciplines covered (e.g. 'Computer Science', 'Medicine')",
+  "tooltip-submitted": "Date when the manuscript was submitted (e.g. '2024-01-15')",
+  "tooltip-subtitle": "Secondary title providing additional context (e.g. 'A Comprehensive Guide', 'Theory and Practice')",
+  "tooltip-supplement-info": "Supplementary information about the publication (e.g. 'Supplementary Material', 'Appendix A')",
+  "tooltip-title": "The main title of the publication (e.g. 'Machine Learning in Healthcare')",
+  "tooltip-url": "Web address where the publication can be accessed (e.g. 'https://example.com/article')",
+  "tooltip-venue": "Conference or event where the work was presented (e.g. 'NeurIPS 2024', 'ICML')",
+  "tooltip-volume": "Volume number in a series of publications (e.g. '15', 'XXIII')",
+  "tooltip-volume-prefix": "Prefix for volume numbering (e.g. 'Vol.')",
+  "tooltip-websiteUrl": "Official website URL of the publication (e.g. 'https://journal.example.com')",
+  "tooltip-year": "Year of publication (e.g. '2024', '2023')",
+  "tooltip-yearSuffix": "Additional suffix for the publication year (e.g. 'a', 'b' for multiple publications in one year)",
+  "tooltip-publicationPlace": "Place of publication (important for German citation styles)",
+  "tooltip-retrievalDate": "When the source was retrieved (for online sources)",
+  "tooltip-originalTitle": "Original title (for translated works) - important for German citation styles",
+  "tooltip-originalLanguage": "Original language of the work (for translations)",
+  "tooltip-seriesNumber": "Series number within a series",
+  "tooltip-pageType": "Type of page reference (e.g., 'p.' or 'pp.')",
+  "tooltip-paragraphNumber": "Paragraph number for sources without page numbers",
+  "tooltip-volumePrefix": "Prefix for volume (e.g., 'Vol.', 'Vols.')",
+  "tooltip-issuePrefix": "Prefix for issue (e.g., 'No.')",
+  "tooltip-supplementInfo": "Supplement information (e.g., 'Suppl. 2')",
   "total-weight": "Total Weight",
   "unregistered": "Unregistered",
   "unverified": "Unverified",
