feat: add extraction settings support for reference extraction and update related components

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -123,6 +123,7 @@
   "field-citationCount": "Anzahl Zitierungen",
   "field-conference": "Konferenz",
   "field-containerTitle": "Zeitschrift/Container-Titel",
+  "field-contributors": "Mitwirkende",
   "field-dateRange": "Datumsbereich",
   "field-day": "Tag",
   "field-degree": "Abschluss",
@@ -154,6 +155,7 @@
   "field-inPress": "Im Druck",
   "field-institution": "Institution",
   "field-isbn": "ISBN",
+  "field-isStandAlone": "Eigenständiges Werk",
   "field-issn": "ISSN",
   "field-issue": "Ausgabe",
   "field-issued": "Publikationsdatum",
@@ -199,6 +201,7 @@
   "field-weights-description": "Passen Sie an, wie wichtig jedes Feld bei der Verifizierung von Referenzen ist. Alle Gewichtungen müssen zusammen 100% ergeben.",
   "field-weights-explanation": "Feldgewichtungen bestimmen, wie wichtig jedes Metadatenfeld beim Vergleich von Referenzen ist. Höhere Gewichtungen bedeuten, dass das Feld mehr Einfluss auf die Gesamtbewertung hat. Die Summe muss 100% ergeben.",
   "field-year": "Jahr",
+  "field-yearEnd": "Jahr Ende",
   "field-yearSuffix": "Jahr-Suffix",
   "flag-problematic": "Als problematisch markieren",
   "flag-problematic-tooltip": "Diese Referenz als möglicherweise problematisch kennzeichnen",
@@ -374,6 +377,7 @@
   "tooltip-citationCount": "Anzahl der Zitierungen dieses Werks (z.B. '145')",
   "tooltip-conference": "Name der Konferenz, auf der präsentiert wurde (z.B. 'ICML 2024')",
   "tooltip-containerTitle": "Name der Zeitschrift, des Buchs oder der Konferenzberichte (z.B. 'Nature', 'Proceedings of ACL')",
+  "tooltip-contributors": "Zusätzliche Mitwirkende neben den Hauptautoren (z.B. 'Herausgeber', 'Übersetzer')",
   "tooltip-dateRange": "Datumsbereich für die Publikation (z.B. '2024-01-15/2024-01-18')",
   "tooltip-day": "Tag der Veröffentlichung (z.B. '15')",
   "tooltip-degree": "Akademischer Grad, für den das Werk eingereicht wurde (z.B. 'PhD', 'Master')",
@@ -385,6 +389,7 @@
   "tooltip-institution": "Akademische Institution, die mit dem Werk verbunden ist (z.B. 'Harvard University', 'Max Planck Institute')",
   "tooltip-isbn": "Internationale Standardbuchnummer für Bücher (z.B. '978-3-16-148410-0')",
   "tooltip-issn": "Internationale Standardnummer für Periodika (z.B. '1234-5678')",
+  "tooltip-isStandAlone": "Ob es sich um ein eigenständiges Werk handelt oder Teil einer Serie (z.B. 'true' für Monographie)",
   "tooltip-issue": "Ausgabennummer innerhalb eines Bands (z.B. '3', 'Special Issue')",
   "tooltip-issue-prefix": "Präfix für die Ausgabennummerierung (z.B. 'No.')",
   "tooltip-issued": "Datum, an dem die Publikation offiziell veröffentlicht wurde (z.B. '2024-05-15')",
@@ -426,6 +431,7 @@
   "tooltip-volume-prefix": "Präfix für die Bandnummerierung (z.B. 'Vol.')",
   "tooltip-websiteUrl": "Offizielle Website-URL der Publikation (z.B. 'https://journal.example.com')",
   "tooltip-year": "Jahr der Veröffentlichung (z.B. '2024', '2023')",
+  "tooltip-yearEnd": "Endjahr für mehrstufige Publikationen oder Zeitspannen (z.B. '2024' bei '2020-2024')",
   "tooltip-yearSuffix": "Zusätzliches Suffix für das Publikationsjahr (z.B. 'a', 'b' bei mehreren Publikationen im Jahr)",
   "tooltip-publicationPlace": "Publikationsort (wichtig für deutsche Zitationsstile)",
   "tooltip-retrievalDate": "Wann die Quelle abgerufen wurde (für Online-Quellen)",
