--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -122,6 +122,7 @@
   "field-citationCount": "Citation Count",
   "field-conference": "Conference",
   "field-containerTitle": "Journal/Container Title",
+  "field-contributors": "Contributors",
   "field-dateRange": "Date Range",
   "field-day": "Day",
   "field-degree": "Degree",
@@ -153,6 +154,7 @@
   "field-inPress": "In Press",
   "field-institution": "Institution",
   "field-isbn": "ISBN",
+  "field-isStandAlone": "Is Standalone",
   "field-issn": "ISSN",
   "field-issue": "Issue",
   "field-issued": "Publication Date",
@@ -198,6 +200,7 @@
   "field-weights-description": "Adjust how much importance each field has when verifying references. All weights must sum to 100%.",
   "field-weights-explanation": "Field weights determine how important each metadata field is when comparing references. Higher weights mean that field has more influence on the overall match score. The total must equal 100%.",
   "field-year": "Year",
+  "field-yearEnd": "Year End",
   "field-yearSuffix": "Year Suffix",
   "flag-problematic": "Flag as problematic",
   "flag-problematic-tooltip": "Mark this reference as potentially problematic",
@@ -373,6 +376,7 @@
   "tooltip-citationCount": "Number of times this work has been cited (e.g. '145')",
   "tooltip-conference": "Name of the conference where presented (e.g. 'ICML 2024')",
   "tooltip-containerTitle": "Name of the journal, book, or conference proceedings (e.g. 'Nature', 'Proceedings of ACL')",
+  "tooltip-contributors": "Additional contributors beyond main authors (e.g. 'editors', 'translators')",
   "tooltip-dateRange": "Date range for the publication (e.g. '2024-01-15/2024-01-18')",
   "tooltip-day": "Day of publication (e.g. '15')",
   "tooltip-degree": "Academic degree for which the work was submitted (e.g. 'PhD', 'Master')",
@@ -383,6 +387,7 @@
   "tooltip-inPress": "Publication is accepted but not yet published (e.g. 'true')",
   "tooltip-institution": "Academic institution associated with the work (e.g. 'Harvard University', 'Max Planck Institute')",
   "tooltip-isbn": "International Standard Book Number for books (e.g. '978-3-16-148410-0')",
+  "tooltip-isStandAlone": "Whether this is a standalone work (e.g. 'true' for monographs)",
   "tooltip-issn": "International Standard Serial Number for periodicals (e.g. '1234-5678')",
   "tooltip-issue": "Issue number within a volume (e.g. '3', 'Special Issue')",
   "tooltip-issue-prefix": "Prefix for issue numbering (e.g. 'No.')",
@@ -425,6 +430,7 @@
   "tooltip-volume-prefix": "Prefix for volume numbering (e.g. 'Vol.')",
   "tooltip-websiteUrl": "Official website URL of the publication (e.g. 'https://journal.example.com')",
   "tooltip-year": "Year of publication (e.g. '2024', '2023')",
+  "tooltip-yearEnd": "End year for date ranges (e.g. '2020' in '2019-2020')",
   "tooltip-yearSuffix": "Additional suffix for the publication year (e.g. 'a', 'b' for multiple publications in one year)",
   "tooltip-publicationPlace": "Place of publication (important for German citation styles)",
   "tooltip-retrievalDate": "When the source was retrieved (for online sources)",
