feat: implement extraction mode settings and instructions for AI processing

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -111,6 +111,14 @@
   "extraction-settings": "Extraktions-Einstellungen",
   "extraction-settings-description": "Konfiguriere, welche Metadatenfelder bei der Dokumentenverarbeitung extrahiert werden sollen",
   "extraction-technical-details": "Technische Details",
+  "extraction-mode": "Extraktions-Modus",
+  "extraction-mode-description": "Wähle, wie die KI Metadaten aus deinen Dokumenten verarbeiten und extrahieren soll",
+  "extraction-mode-strict": "Wissenschaftlich",
+  "extraction-mode-strict-description": "1:1 Extraktion ohne Korrekturen - ideal für Qualitätskontrolle und Plagiatsprüfung",
+  "extraction-mode-balanced": "Standard",
+  "extraction-mode-balanced-description": "Korrigiert Formatierung und Tippfehler, behält aber inhaltliche Genauigkeit bei - perfekt für den Alltag",
+  "extraction-mode-tolerant": "Flexibel",
+  "extraction-mode-tolerant-description": "Extrahiert auch aus unvollständigen Quellen mit intelligenter Inferenz - für Webdaten und OCR",
   "field": "Feld",
   "field-abstract": "Abstract",
   "field-accepted": "Annahmedatum",
@@ -171,7 +179,7 @@
   "field-originalLanguage": "Originalsprache",
   "field-originalTitle": "Originaltitel",
   "field-pages": "Seiten",
-  "field-pageType": "Seitentyp",
+  "field-page-type": "Seitentyp",
   "field-paragraphNumber": "Absatznummer",
   "field-peerReviewed": "Peer-Review",
   "field-pmcid": "PMC ID",
