--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -110,6 +110,14 @@
   "extraction-settings": "Extraction Settings",
   "extraction-settings-description": "Configure which metadata fields should be extracted during document processing",
   "extraction-technical-details": "Technical Details",
+  "extraction-mode": "Extraction Mode",
+  "extraction-mode-description": "Choose how the AI should process and extract metadata from your documents",
+  "extraction-mode-strict": "Scientific",
+  "extraction-mode-strict-description": "1:1 extraction without corrections - ideal for quality control and plagiarism analysis",
+  "extraction-mode-balanced": "Standard",
+  "extraction-mode-balanced-description": "Fix formatting and typos but maintain content accuracy - perfect for everyday use",
+  "extraction-mode-tolerant": "Flexible",
+  "extraction-mode-tolerant-description": "Extract even from incomplete sources with intelligent inference - for web data and OCR",
   "field": "Field",
   "field-abstract": "Abstract",
   "field-accepted": "Acceptance Date",
@@ -170,7 +178,7 @@
   "field-originalLanguage": "Original Language",
   "field-originalTitle": "Original Title",
   "field-pages": "Pages",
-  "field-pageType": "Page Type",
+  "field-page-type": "Page Type",
   "field-paragraphNumber": "Paragraph Number",
   "field-peerReviewed": "Peer Reviewed",
   "field-pmcid": "PMC ID",
@@ -184,7 +192,7 @@
   "field-retrievalDate": "Retrieval Date",
   "field-season": "Season",
   "field-series": "Series",
-  "field-seriesNumber": "Series Number",
+  "field-series-number": "Series Number",
   "field-sourceType": "Source Type",
   "field-subjects": "Subjects",
   "field-submitted": "Submission Date",
